# ElectronicsStore

./: .env-sample  README.md  log.txt  pyproject.toml
config/: settings.py  urls.py
data/: alldata.json  suppliers.json  testdata.json
suppliers/: admin.py  models.py  permissions.py  serializers.py  service.py  tests.py  urls.py  validators.py  views.py
suppliers/migrations/: 0001_initial.py  0002_alter_supplier_city_alter_supplier_country_and_more.py  0002_alter_supplier_prev_supplier.py  0003_alter_supplier_debt.py  0003_contact_product_supplier_contacts_supplier_product.py  0004_alter_supplier_debt.py  0004_rename_contact_contacts_alter_contacts_options.py  0005_alter_supplier_options_remove_supplier_city_and_more.py  0006_alter_supplier_contacts.py  0007_alter_supplier_contacts.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_managers.py
